Fixed z-index issue on mobile

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,9 +7,9 @@ $sidebar-mobile-width: 90%;
 $sidebar-tablet-width: 240px;
 $sidebar-desktop-width: 290px;
 
-$mobile-menu-btn-z: 4;
-$sidebar-drawer-z: 3;
-$sidebar-drawer-overlay-z: 2;
+$mobile-menu-btn-z: 5;
+$sidebar-drawer-z: 4;
+$sidebar-drawer-overlay-z: 3;
 $results-table-header-z: 1;
 
 // Style
